--- a/appdetails.json
+++ b/appdetails.json
@@ -12,7 +12,7 @@
     {"id":3, "app":"com.tor.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Gunzenhausen","country":"Germany","image":"germany","ip":"172.245.104.117","active":"true","signal":"a"},
+    {"id":0, "file":0, "city":"Seoul","country":"Korea","image":"korea","ip":"172.245.104.117","active":"true","signal":"a"},
     {"id":1, "file":0, "city":"Gunzenhausen","country":"Germany","image":"germany","ip":"172.245.104.117","active":"true","signal":"b"},
     {"id":2, "file":1, "city":"Gunzenhausen","country":"Germany","image":"germany","ip":"172.245.104.117","active":"true","signal":"c"}
   ]
