--- a/appdetails.json
+++ b/appdetails.json
@@ -13,7 +13,7 @@
   ],
   "free":[
     {"id":0, "file":0, "city":"Seoul","country":"Korea","image":"korea","ip":"172.245.104.117","active":"true","signal":"a"},
-    {"id":1, "file":0, "city":"Gunzenhausen","country":"Germany","image":"germany","ip":"172.245.104.117","active":"true","signal":"b"},
+    {"id":1, "file":0, "city":"T'aebaek","country":"Korea","image":"korea","ip":"172.245.104.117","active":"true","signal":"b"},
     {"id":2, "file":1, "city":"Gunzenhausen","country":"Germany","image":"germany","ip":"172.245.104.117","active":"true","signal":"c"}
   ]
 }
