--- a/appdetails.json
+++ b/appdetails.json
@@ -14,6 +14,6 @@
   "free":[
     {"id":0, "file":0, "city":"Seoul","country":"Korea","image":"korea","ip":"172.245.104.117","active":"true","signal":"a"},
     {"id":1, "file":0, "city":"T'aebaek","country":"Korea","image":"korea","ip":"172.245.104.117","active":"true","signal":"b"},
-    {"id":2, "file":1, "city":"Gunzenhausen","country":"Germany","image":"germany","ip":"172.245.104.117","active":"true","signal":"c"}
+    {"id":2, "file":1, "city":"Okayama","country":"Japan","image":"japan","ip":"172.245.104.117","active":"true","signal":"c"}
   ]
 }
